# crc-fast-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  libcrc_fast.h
.github/workflows/: release.yml  tests.yml
.kiro/specs/checksum-benchmark-option/: design.md  requirements.md  tasks.md
.kiro/specs/crc-params-caching/: design.md  requirements.md  tasks.md
.kiro/specs/future-proof-crc-params/: design.md  requirements.md  tasks.md
.kiro/specs/github-release-automation/: design.md  requirements.md  tasks.md
.kiro/steering/: code-quality-requirements.md  commenting-guidelines.md
benches/: benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: checksum_crc32_autosar.rs  checksum_crc32_bzip2.rs  checksum_crc32_iscsi.rs  checksum_crc32_iso_hdlc.rs  checksum_crc64_ecma_182.rs  checksum_crc64_nvme.rs  digest.rs  digest_crc32_autosar.rs  digest_crc32_bzip2.rs  digest_crc32_iscsi.rs  digest_crc32_iso_hdlc.rs  digest_crc64_ecma_182.rs  digest_crc64_nvme.rs
include/: crc32_iscsi.h  crc32_iscsi_avx512_v4s3x3.c  crc32_iscsi_avx512_vpclmulqdq_v3x2.c  crc32_iscsi_neon_blended.c  crc32_iscsi_neon_eor3_v9s3x2e_s3.c  crc32_iscsi_neon_v12e_v1.c  crc32_iscsi_neon_v3s4x2e_v2.c  crc32_iscsi_sse_v4s3x3.c  crc32_iso_hdlc.h  crc32_iso_hdlc_avx512_v4s3x3.c  crc32_iso_hdlc_avx512_vpclmulqdq_v3x2.c  crc32_iso_hdlc_neon_blended.c  crc32_iso_hdlc_neon_eor3_v9s3x2e_s3.c  crc32_iso_hdlc_neon_v12e_v1.c  crc32_iso_hdlc_neon_v3s4x2e_v2.c  crc32_iso_hdlc_sse_v4s3x3.c
src/: algorithm.rs  cache.rs  combine.rs  consts.rs  enums.rs  feature_detection.rs  ffi.rs  generate.rs  lib.rs  structs.rs  traits.rs
src/arch/: aarch64.rs  aarch64_sha3.rs  mod.rs  software.rs  vpclmulqdq.rs  x86.rs
src/arch/aarch64/: aes.rs  aes_sha3.rs  mod.rs
src/arch/x86/: mod.rs  sse.rs
src/arch/x86_64/: avx512.rs  avx512_vpclmulqdq.rs  mod.rs
src/bindings/: crc32_iscsi.rs  crc32_iso_hdlc.rs  mod.rs
src/crc32/: algorithm.rs  consts.rs  mod.rs
src/crc32/fusion/: aarch64.rs  mod.rs  x86.rs
src/crc32/fusion/aarch64/: mod.rs
src/crc32/fusion/aarch64/iscsi/: crc_pmull.rs  crc_pmull_sha3.rs  mod.rs
src/crc32/fusion/aarch64/iso_hdlc/: crc_pmull.rs  crc_pmull_sha3.rs  mod.rs
src/crc32/fusion/x86/: mod.rs
src/crc32/fusion/x86/iscsi/: avx512_pclmulqdq.rs  avx512_vpclmulqdq.rs  mod.rs  sse_pclmulqdq.rs
src/crc64/: algorithm.rs  consts.rs  mod.rs  utils.rs
src/test/: consts.rs  enums.rs  future_proof.rs  future_proof_tests.rs  mod.rs  structs.rs
tests/: checksum_integration_tests.rs  no_std_tests.rs  wasm_tests.rs
