[package]
name = "crc-fast"
version = "1.6.0"
edition = "2021"
authors = ["Don MacAskill"]
license = "MIT OR Apache-2.0"
keywords = ["crc", "checksum", "simd", "accelerated", "fast"]
categories = ["algorithms", "encoding", "hardware-support"]
repository = "https://github.com/awesomized/crc-fast-rust"
description = "World's fastest generic CRC32 and CRC64 calculator using SIMD. Supplies a C-compatible shared library for use in other languages."
readme = "README.md"

# important intrinsics stabilization notes:
# 1.69.0 added VPCLMULQDQ x86 detection support
# 1.70.0 added LLVM 16 which supports PMULL2 on Aarch64
# 1.89.0 stabilized AVX-512 intrinsics, including VPCLMULQDQ
rust-version = "1.81"

[lib]
name = "crc_fast"
crate-type = ["lib", "cdylib", "staticlib"]
bench = true

[dependencies]
crc = "3"
digest = {  version = "0.10", features = ["alloc"] }
rand = "0.9"
regex = "1.12"

# will be removed once Rust 1.89 is the minimum supported version
rustversion = "1.0"

# constrain indexmap (transitive) to a version compatible with Rust 1.81.0
indexmap = { version = ">=2.11.0, <2.12.0", optional = true }

[dev-dependencies]
criterion = "0.7"
cbindgen = "0.29"

# lto=true has a big improvement in performance
[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "benchmark"
harness = false

[features]
alloc = []

# the features below are deprecated, aren't in use, and will be removed in the next MAJOR version (v2)
vpclmulqdq = [] # deprecated, VPCLMULQDQ stabilized in Rust 1.89.0
optimize_crc32_auto = [] # deprecated
optimize_crc32_neon_eor3_v9s3x2e_s3 = [] # deprecated
optimize_crc32_neon_v12e_v1 = [] # deprecated
optimize_crc32_neon_v3s4x2e_v2 = [] # deprecated
optimize_crc32_neon_blended = [] # deprecated
optimize_crc32_avx512_vpclmulqdq_v3x2 = [] # deprecated
optimize_crc32_avx512_v4s3x3 = [] # deprecated
optimize_crc32_sse_v4s3x3 = [] # deprecated